--- a/public/css/core.css
+++ b/public/css/core.css
@@ -213,6 +213,12 @@ h3 small,
   margin-top: 10px;
   width: 50%;
 }
+.subscriber {
+  padding-left: 0px !important;
+}
+.content-width {
+  width: 1105px;
+}
 a,
 button,
 input,
