#1 User edit,validation,setter-getter methods Layout tweeks

--- a/public/css/core.css
+++ b/public/css/core.css
@@ -209,7 +209,7 @@ h3 small,
 .parsley-errors-list.filled {
   margin: 7px 0px -10px 8px;
 }
-.login-alert {
+.message-alert {
   margin-top: 10px;
   width: 50%;
 }
